[gd_scene load_steps=9 format=2]

[ext_resource path="res://assets/players/andy/mariah.jpg" type="Texture" id=1]
[ext_resource path="res://assets/players/andy/stero.png" type="Texture" id=2]
[ext_resource path="res://scripts/andys_ult.gd" type="Script" id=3]
[ext_resource path="res://assets/players/andy/circle.png" type="Texture" id=4]
[ext_resource path="res://assets/players/andy/song.ogg" type="AudioStream" id=5]

[sub_resource type="CircleShape2D" id=1]
radius = 341.761

[sub_resource type="Animation" id=2]
resource_name = "go"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Area2D/ring:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0.745098 ), Color( 1, 1, 1, 0.235294 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Area2D/ring2:self_modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0.235294 ), Color( 1, 1, 1, 0.745098 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Area2D/ring3:self_modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0.745098 ), Color( 1, 1, 1, 0.235294 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Area2D/ring4:self_modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0.235294 ), Color( 1, 1, 1, 0.745098 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Area2D:monitoring")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[sub_resource type="Animation" id=3]
resource_name = "load"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("Area2D/ring:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Area2D/ring2:self_modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 0 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Area2D/ring3:self_modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 0 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Area2D/ring4:self_modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 0 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Area2D:modulate")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 0.499984 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("Area2D:monitoring")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, false ]
}

[node name="andys_ult" type="Node2D"]
script = ExtResource( 3 )

[node name="Area2D" type="Area2D" parent="."]
monitoring = false

[node name="album" type="Sprite" parent="Area2D"]
scale = Vector2( 0.25, 0.25 )
texture = ExtResource( 1 )

[node name="stereo" type="Sprite" parent="Area2D"]
position = Vector2( 98.4198, 0.813384 )
scale = Vector2( 2.3, 2.3 )
texture = ExtResource( 2 )

[node name="stereo2" type="Sprite" parent="Area2D"]
position = Vector2( -96.793, 1.62677 )
scale = Vector2( 2.3, 2.3 )
texture = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
visible = false
shape = SubResource( 1 )

[node name="ring" type="Sprite" parent="Area2D"]
modulate = Color( 0, 0.976471, 1, 1 )
self_modulate = Color( 1, 1, 1, 0 )
scale = Vector2( 12, 12 )
texture = ExtResource( 4 )

[node name="ring2" type="Sprite" parent="Area2D"]
modulate = Color( 0, 0.976471, 1, 1 )
self_modulate = Color( 1, 1, 1, 0 )
scale = Vector2( 10, 10 )
texture = ExtResource( 4 )

[node name="ring3" type="Sprite" parent="Area2D"]
modulate = Color( 0, 0.976471, 1, 1 )
self_modulate = Color( 1, 1, 1, 0 )
scale = Vector2( 8, 8 )
texture = ExtResource( 4 )

[node name="ring4" type="Sprite" parent="Area2D"]
modulate = Color( 0, 0.976471, 1, 1 )
self_modulate = Color( 1, 1, 1, 0 )
scale = Vector2( 6, 6 )
texture = ExtResource( 4 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "load"
anims/go = SubResource( 2 )
anims/load = SubResource( 3 )

[node name="Timer" type="Timer" parent="."]
wait_time = 4.5
one_shot = true
autostart = true

[node name="BeatTimer" type="Timer" parent="."]
wait_time = 0.5

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )
autoplay = true
[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="BeatTimer" to="." method="_on_BeatTimer_timeout"]
